# retune-for-all

./: .gitignore  19_to_12.kbm  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.tsv  cyclone975@raspberrypi.local  dist-workspace.toml  presets.yml  white_notes7.kbm
.github/workflows/: release.yml
context/: context_checkpoint_20260617.md  gemini_context.md  project_overview.md
src/: main.rs  midi.rs  presets.yml  tuning.rs  ui.rs
