[package]
name = "poly-router"
version = "0.1.0"
edition = "2021"

[dependencies]
midir = "0.9"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
crossterm = "0.29"
ratatui-textarea = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0.29"
tui-menu = "0.3.1"

[profile.release]
opt-level = 3        
lto = true           
codegen-units = 1    
strip = true
panic = "abort"
